crates/reap-live/tests/ui/no_public_regular_mutation_actions.rs
use reap_live::{CancelAction, CoordinatorOutput, LiveAction, ReconcileAction, SubmitAction};

fn inspect_internal_actions(output: CoordinatorOutput) {
    let _ = output.actions;
}

fn main() {}
